# libtorrent_flutter

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  STREAMING_ENGINE_RESEARCH.md  build_macos.sh  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/libtorrentflutter/libtorrent_flutter_example/: MainActivity.kt
example/integration_test/: engine_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: libtorrent_flutter.podspec
ios/libtorrent_flutter.xcframework/ios-arm64/Headers/: torrent_bridge.h
lib/src/: ffi_bindings.dart  libtorrent_flutter_base.dart  models.dart
linux/: CMakeLists.txt
macos/: libtorrent_flutter.podspec
macos/Classes/: libtorrent_flutter.c
prebuilt/macos/universal/: liblibtorrent_flutter.dylib
src/: CMakeLists.txt  torrent_bridge.cpp  torrent_bridge.h
src/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libtorrent_flutter.vcxproj  libtorrent_flutter.vcxproj.filters  libtorrent_flutter_native.sln
src/build_win/libtorrent_flutter.dir/Release/: libtorrent_flutter.dll.recipe
src/build_win/libtorrent_flutter.dir/Release/libtorre.D9C251C4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/build_win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
src/build_win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
src/build_win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/build_win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
windows/: CMakeLists.txt
